# python-demo

./: .gitignore  03operators.py  04type-cast.py  05input.py  06print-f-string.py  07if-elif.py  08for-while.py  09list.py  10list_def.py  11tuple.py  12dict.py  13dict_def.py  14set.py  15def.py  16try-except.py  17file-read-write.py  18module-package.py  19str-advanced.py  20list-dict-comprehensions.py  21venv.py  22pip.py  23project-structure-modular-design.py  24pytest-learn.py  25click.py  26logging.py  27env.py  28oop.py  29oop.py  29oop1.py  30oop2.py  31oop3.py  32oop4.py  33oop5.py  34oop6.py  35oop7.py  README.md  helloworld.py  install.bat  math_utils.py  print-demo.py  (+1 more)
.github/: copilot-instructions.md
contact_app/: main.py
contact_app/core/: __init__.py  contacts.py  storage.py
contact_app/tests/: test_validators.py
contact_app/utils/: validators.py
contact_app2/: .env.example  requirements.txt  setup.py
contact_app2/src/contact_app/: __init__.py
contact_app2/src/contact_app2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+1 more)
contact_app2/tests/: test_contacts.py  test_validators.py
contact_app3/: .env.example  requirements.txt  setup.py
contact_app3/tests/: __init__.py
library_system/: main copy.py  main.py
library_system/core/: models.py  services.py
library_system/infrastructure/: in_memory_repos.py  json_repos.py
library_system/tests/: test_library_service.py
library_system_api/: README.md  pyproject.toml  requirements.txt  ruff.toml
library_system_api/api/: main.py
library_system_api/core/: interfaces.py  services.py
(+11 files in other folders)
